--- a/Energy_Consumption_Analysis.ipynb
+++ b/Energy_Consumption_Analysis.ipynb
@@ -24,83 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "c31a704e",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.1     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.2\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 4.0.0     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.3.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.4     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.1.0     \n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
-      "corrplot 0.95 loaded\n",
-      "\n",
-      "Loading required package: colorspace\n",
-      "\n",
-      "Loading required package: grid\n",
-      "\n",
-      "VIM is ready to use.\n",
-      "\n",
-      "\n",
-      "Suggestions and bug-reports can be submitted at: https://github.com/statistikat/VIM/issues\n",
-      "\n",
-      "\n",
-      "Attaching package: 'VIM'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:datasets':\n",
-      "\n",
-      "    sleep\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: 'scales'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:purrr':\n",
-      "\n",
-      "    discard\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:readr':\n",
-      "\n",
-      "    col_factor\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: 'reshape2'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:tidyr':\n",
-      "\n",
-      "    smiths\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: 'gridExtra'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:dplyr':\n",
-      "\n",
-      "    combine\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load essential libraries \n",
     "library(tidyverse) \n",
@@ -109,7 +40,8 @@
     "library(corrplot) \n",
     "library(VIM) \n",
     "library(scales) \n",
-    "library(reshape2) \n",
+    "library(reshape2)\n",
+    "library(RColorBrewer)\n",
     "library(gridExtra)"
    ]
   },
@@ -629,7 +561,7 @@
    "id": "02e9cbf5",
    "metadata": {},
    "source": [
-    "\n",
+    "---\n",
     "### Data Quality Assessment: Low-GDP Countries\n",
     "\n",
     "Building on the initial data overview, this section focuses on the **data quality among low-GDP countries** - those whose GDP values fall **below the first quartile (Q1)** of the global distribution.  \n",
@@ -811,12 +743,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "828daeb2",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "58765304",
    "metadata": {},
    "source": [
@@ -885,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "id": "d870f6ea",
    "metadata": {
     "vscode": {
@@ -915,21 +841,16 @@
     "  summarise(across(everything(), .fns = ~ (sum(is.na(.)) / n()) * 100)) %>%\n",
     "  pivot_longer(cols = everything(), names_to = \"Variable\", values_to = \"Percentage\")\n",
     "\n",
-    "\n",
-    "# --- 2. Create the Lollipop Chart ---\n",
     "ggplot(missing_data_for_plot, aes(x = Percentage, y = fct_reorder(Variable, Percentage))) +\n",
     "  \n",
-    "  # Add the horizontal line segments (the \"stick\")\n",
     "  geom_segment(\n",
     "    aes(x = 0, xend = Percentage, yend = Variable), \n",
-    "    color = \"#495057\",  # A dark grey color\n",
+    "    color = \"#495057\", \n",
     "    linewidth = 0.75\n",
     "  ) +\n",
     "  \n",
-    "  # Add the points (the \"candy\")\n",
     "  geom_point(color = \"#495057\", size = 3) +\n",
     "  \n",
-    "  # --- 3. Add Labels and a Clean Theme ---\n",
     "  labs(\n",
     "    title = \"Missing Values per Column\",\n",
     "    x = \"% Missing\",\n",
@@ -937,8 +858,8 @@
     "  ) +\n",
     "  theme_minimal(base_size = 14) +\n",
     "  theme(\n",
-    "    panel.grid.major.y = element_blank(), # Remove horizontal grid lines for clarity\n",
-    "    panel.grid.minor.x = element_blank()  # Remove minor vertical grid lines\n",
+    "    panel.grid.major.y = element_blank(), \n",
+    "    panel.grid.minor.x = element_blank() \n",
     "  )"
    ]
   },
@@ -957,8 +878,8 @@
    "id": "69d5bd45",
    "metadata": {},
    "source": [
-    "---\n",
-    "### Variability and Outlier Detection"
+    "\n",
+    "#### Variability and Outlier Detection"
    ]
   },
   {
@@ -1172,8 +1093,7 @@
     "**Interpretation:**  \n",
     "Visual inspection confirms a few extreme points in **population** and **fossil fuel** usage, but most variables exhibit compressed ranges - reflecting limited diversity and industrial activity among low-income nations.\n",
     "\n",
-    "---\n",
-    "### Data Consistency and Duplicates"
+    "#### Data Consistency and Duplicates"
    ]
   },
   {
@@ -1218,7 +1138,6 @@
     "**Result:**  \n",
     "No duplicates detected, indicating data integrity is maintained within this subset.\n",
     "\n",
-    "---\n",
     "\n",
     "#### Interpretation & Insights\n",
     "\n",
@@ -1452,7 +1371,7 @@
    "id": "52079afd",
    "metadata": {},
    "source": [
-    "### Relationship Between Energy Sources"
+    "#### Relationship Between Energy Sources"
    ]
   },
   {
@@ -1494,7 +1413,7 @@
    "id": "739dec37",
    "metadata": {},
    "source": [
-    "## Global Energy Composition"
+    "#### Global Energy Composition"
    ]
   },
   {
@@ -1555,8 +1474,8 @@
    "id": "1bc4a327",
    "metadata": {},
    "source": [
-    "---\n",
-    "## Regional Energy Mix"
+    "\n",
+    "#### Regional Energy Mix"
    ]
   },
   {
@@ -1628,68 +1547,6 @@
     "  labs(title = \"Regional Energy Composition (2010)\",\n",
     "       x = \"Region\", y = \"Average Share of Total Energy (%)\") +\n",
     "  theme_minimal()})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "a322746a",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in UseMethod(\"filter\"): no applicable method for 'filter' applied to an object of class \"function\"\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in UseMethod(\"filter\"): no applicable method for 'filter' applied to an object of class \"function\"\nTraceback:\n",
-      "1. filter(., year == 2010)",
-      "2. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"no applicable method for 'filter' applied to an object of class \\\"function\\\"\", \n .     base::quote(UseMethod(\"filter\")))"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "energy_2010 <- df %>%\n",
-    "  filter(year == 2010)\n",
-    "\n",
-    "# Step 1b: Reshape data from wide to long format for plotting\n",
-    "energy_2010_long <- energy_2010 %>%\n",
-    "  select(country, fossil_fuel, nuclear, renewables) %>%\n",
-    "  pivot_longer(\n",
-    "    cols = c(fossil_fuel, nuclear, renewables), # The columns you want to stack\n",
-    "    names_to = \"energy_source\",                # New column for the source name\n",
-    "    values_to = \"consumption\"                  # New column for the consumption value\n",
-    "  ) %>%\n",
-    "  # Remove any rows where consumption data is missing\n",
-    "  filter(!is.na(consumption))\n",
-    "  \n",
-    "ggplot(energy_2010_long, aes(x = consumption, y = reorder(country, consumption, FUN = sum), fill = energy_source)) +\n",
-    "\n",
-    "  # Create the stacked bars. stat=\"identity\" is crucial to use the values from our 'consumption' column.\n",
-    "  geom_bar(stat = \"identity\") +\n",
-    "\n",
-    "  # Set the title, labels, and legend title\n",
-    "  labs(\n",
-    "    title = \"Energy Consumption by Source in 2010\",\n",
-    "    subtitle = \"Breakdown for Different Countries\",\n",
-    "    x = \"Energy Consumption (TWh)\",\n",
-    "    y = \"Country\",\n",
-    "    fill = \"Energy Source\"\n",
-    "  ) +\n",
-    "\n",
-    "  # Manually set the colors to match your example\n",
-    "  scale_fill_manual(values = c(\n",
-    "    \"fossil_fuel\" = \"red\",\n",
-    "    \"nuclear\" = \"darkblue\",\n",
-    "    \"renewables\" = \"lightblue\"\n",
-    "  )) +\n",
-    "\n",
-    "  # Use a clean, professional theme\n",
-    "  theme_bw()"
    ]
   },
   {
@@ -1772,10 +1629,9 @@
    "id": "983d63cc",
    "metadata": {},
    "source": [
-    "Energy demand rises sharply with GDP, but the slope flattens among the wealthiest countries — evidence of efficiency gains and technological maturity.\n",
+    "Energy demand rises sharply with GDP, but the slope flattens among the wealthiest countries - evidence of efficiency gains and technological maturity.\n",
     "\n",
-    "---\n",
-    "## Population and Energy Demand"
+    "#### Population and Energy Demand"
    ]
   },
   {
@@ -1827,7 +1683,7 @@
    "id": "cf955cc6",
    "metadata": {},
    "source": [
-    "Population size correlates moderately with total energy use — more people generally imply higher demand, though wealth remains the stronger driver."
+    "Population size correlates moderately with total energy use - more people generally imply higher demand, though wealth remains the stronger driver."
    ]
   },
   {
@@ -1835,7 +1691,7 @@
    "id": "6f6bd359",
    "metadata": {},
    "source": [
-    "## Correlation Insights"
+    "#### Correlation Insights"
    ]
   },
   {
@@ -1865,17 +1721,13 @@
     }
    ],
    "source": [
-    "library(dplyr)\n",
-    "library(corrplot)\n",
-    "library(RColorBrewer)\n",
     "\n",
-    "# Fix dataset\n",
     "energy_econ_clean <- energy_econ %>%\n",
     "  mutate(\n",
-    "    # Replace infinite values with NA\n",
+    "    \n",
     "    log_energy = ifelse(is.infinite(log_energy), NA, log_energy)\n",
     "  ) %>%\n",
-    "  # Optionally remove rows where all main variables are NA\n",
+    "  \n",
     "  filter(!if_all(c(log_gdp, log_population, log_energy, fossil_fuel, renewables, nuclear), is.na))\n",
     "\n",
     "# Now compute correlation\n",
@@ -1959,20 +1811,7 @@
     "- Wealthier economies exhibit **greater energy efficiency**, reflecting technological and policy evolution.  \n",
     "\n",
     "\n",
-    "##### These insights set the stage for country-specific trend exploration, such as **Japan vs South Korea**, where policy and innovation shape long-term energy transitions.\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3df42bb",
-   "metadata": {},
-   "source": [
-    "## Economic and Demographic Drivers of Energy Use\n",
-    "\n",
-    "Building on the global and regional overview, we now explore how **economic output (GDP)** and **population size** shape total energy demand.  \n",
-    "Understanding these drivers reveals whether energy use is primarily driven by wealth, demographics, or both.\n",
-    "\n"
+    "##### These insights set the stage for country-specific trend exploration, such as **Japan vs South Korea**, where policy and innovation shape long-term energy transitions."
    ]
   },
   {
